fix: centered Toastify on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -170,4 +170,16 @@ input[type="checkbox"]:disabled {
 			display: none;
 		}
 	}
+
+	.Toastify {
+		&__toast-container {
+			width: 80vw !important;
+
+			&--bottom-center {
+				bottom: 1em !important;
+				left: 50% !important;
+				transform: translateX(-50%) !important;
+			}
+		}
+	}
 }
